--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
                 <h1 class="title">Sylvain Dethier</h1>
                 <nav>
                     <ul>
-                        <li><a href="#competences">Compétences</a></li>
-                        <li><a href="#experiences">Expériences</a></li>
-                        <li><a href="#formation">Formations</a></li>
+                        <li><a href="#Competences">Compétences</a></li>
+                        <li><a href="#Experiences">Expériences</a></li>
+                        <li><a href="#Formations">Formations</a></li>
                     </ul>
                 </nav>
             </header>
@@ -40,18 +40,20 @@
                 <article>
                     <header>
                         <h1>Informations</h1>
+                        <p class="active"><i class="fa fa-check"></i>Actuellement à l'écoute du marché</p>
+                        <p class="hidden"><i class="fa fa-ban"></i>Actuellement non disponible</p>
                         <p>Je suis passionné par les sciences et l’informatique, et fais une veille continue sur les technologies web. Mon sens de la logique sert à l’analyse des systèmes, la compréhension de leur fonctionnement, ainsi qu’à la réflexion aux solutions. Curieux et perfectionniste, j’aime apprendre les bonnes pratiques pour concevoir du code meilleur: testé, maintenable, évolutif, lisible, compréhensible, tâches automatisées.</p>
                     </header>
                     <section>
-                        <h2><a name="competences" class="hidden"></a>Compétences</h2>
+                        <h2 id="Competences">Compétences</h2>
                         <p></p>
                     </section>
                     <section>
-                        <h2><a name="experiences" class="hidden"></a>Expériences</h2>
+                        <h2 id="Experiences">Expériences</h2>
                         <p></p>
                     </section>
                     <section>
-                        <h2><a name="formations" class="hidden"></a>Formations</h2>
+                        <h2 id="Formations">Formations</h2>
                         <p></p>
                     </section>
                     <footer>
