--- a/index.html
+++ b/index.html
@@ -11,7 +11,11 @@
         <meta name="viewport" content="width=device-width">
 
         <link rel="stylesheet" href="css/normalize.min.css">
+
+        <!-- FontAwesome -->
         <link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
+        <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.0/css/bootstrap-theme.min.css">
+
         <link rel="stylesheet" href="css/main.css">
 
         <script src="js/vendor/modernizr-2.6.2-respond-1.1.0.min.js"></script>
@@ -40,8 +44,8 @@
                 <article>
                     <header>
                         <h1>Informations</h1>
-                        <p class="active"><i class="fa fa-check"></i>Actuellement à l'écoute du marché</p>
-                        <p class="hidden"><i class="fa fa-ban"></i>Actuellement non disponible</p>
+                        <p class="label label-success"><i class="fa fa-check"></i> &nbsp; Actuellement à l'écoute du marché</p>
+                        <p class="label label-danger -hidden"><i class="fa fa-ban"></i> &nbsp; Actuellement non disponible</p>
                         <p>Je suis passionné par les sciences et l’informatique, et fais une veille continue sur les technologies web. Mon sens de la logique sert à l’analyse des systèmes, la compréhension de leur fonctionnement, ainsi qu’à la réflexion aux solutions. Curieux et perfectionniste, j’aime apprendre les bonnes pratiques pour concevoir du code meilleur: testé, maintenable, évolutif, lisible, compréhensible, tâches automatisées.</p>
                     </header>
                     <section>
@@ -72,7 +76,8 @@
 
         <div class="footer-container">
             <footer class="wrapper">
-                <h3>footer</h3>
+                <!--<h3>footer</h3>-->
+                <p>Propulsé par: <a href="http://pages.github.com/">Github Pages <i class="fa fa-github"></i></a>, <a href="http://www.initializr.com/">Initializr <i class="fa fa-html5"></i> <i class="fa fa-css3"></i></a>, <a href="http://fortawesome.github.io/Font-Awesome/">FontAwesome</a></p>
             </footer>
         </div>
 
