--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
 
         <!-- FontAwesome -->
         <link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
-        <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.0/css/bootstrap-theme.min.css">
 
         <link rel="stylesheet" href="css/main.css">
 
@@ -40,17 +39,31 @@
 
         <div class="main-container">
             <div class="main wrapper clearfix">
+                <h2>Développeur PHP Symfony, JavaScript, application web sur Paris</h2>
 
                 <article>
                     <header>
-                        <h1>Informations</h1>
-                        <p class="label label-success"><i class="fa fa-check"></i> &nbsp; Actuellement à l'écoute du marché</p>
-                        <p class="label label-danger -hidden"><i class="fa fa-ban"></i> &nbsp; Actuellement non disponible</p>
+                        <h2 class="section-title">Informations</h2>
+                        <h3><span class="label label-success"><i class="fa fa-check"></i> &nbsp; Actuellement à l'écoute du marché</span></h3>
+                        <h3 class="hidden"><span class="label label-danger"><i class="fa fa-ban"></i> &nbsp; Actuellement non disponible</span></h3>
                         <p>Je suis passionné par les sciences et l’informatique, et fais une veille continue sur les technologies web. Mon sens de la logique sert à l’analyse des systèmes, la compréhension de leur fonctionnement, ainsi qu’à la réflexion aux solutions. Curieux et perfectionniste, j’aime apprendre les bonnes pratiques pour concevoir du code meilleur: testé, maintenable, évolutif, lisible, compréhensible, tâches automatisées.</p>
                     </header>
                     <section>
-                        <h2 id="Competences">Compétences</h2>
-                        <p></p>
+                        <h2 class="section-title" id="Competences">Compétences</h2>
+                        <h3><i>Langages / Frameworks</i></h3>
+                        <ul class="no-ul">
+                            <li><b class="skill">PHP</b> <small class="level"><i class="fa fa-circle"></i><i class="fa fa-circle"></i><i class="fa fa-circle"></i><i class="fa fa-circle-o"></i><i class="fa fa-circle-o"></i></small> confirmé: Symfony 1.4, Symfony2, Zend 1.x</li>
+
+                            <li><b class="skill">JavaScript</b> <small class="level"><i class="fa fa-circle"></i><i class="fa fa-circle"></i><i class="fa fa-circle"></i><i class="fa fa-circle-o"></i><i class="fa fa-circle-o"></i></small> confirmé: Natif, AJAX, jQuery, ExtJS, Promise, AngularJS</li>
+
+                            <li><b class="skill">SQL</b> <small class="level"><i class="fa fa-circle"></i><i class="fa fa-circle"></i><i class="fa fa-circle"></i><i class="fa fa-circle-o"></i><i class="fa fa-circle-o"></i></small> confirmé: MySQL, PostgreSQL</li>
+
+                            <li><b class="skill">HTML</b> <small class="level"><i class="fa fa-circle"></i><i class="fa fa-circle"></i><i class="fa fa-circle"></i><i class="fa fa-circle-o"></i><i class="fa fa-circle-o"></i></small> confirmé: Intégration, Html5 Boilerplate</li>
+
+                            <li><b class="skill">CSS</b> <small class="level"><i class="fa fa-circle"></i><i class="fa fa-circle"></i><i class="fa fa-circle-o"></i><i class="fa fa-circle-o"></i><i class="fa fa-circle-o"></i></small> intermédiare: Bootstrap, Modernizr, Système de grille, Responsive</li>
+                        </ul>
+                        <h3><i>Outils</i></h3>
+                        <p>Plateforme LAMP, PhpMyAdmin, MySQL Workbench, PHPUnit, NodeJS, Git / Github, SVN, Redmine, Sublime Text, Eclipse, Netbeans</p>
                     </section>
                     <section>
                         <h2 id="Experiences">Expériences</h2>
@@ -68,7 +81,15 @@
 
                 <aside>
                     <h3><a name="contact" class="hidden"></a>Contact</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam sodales urna non odio egestas tempor. Nunc vel vehicula ante. Etiam bibendum iaculis libero, eget molestie nisl pharetra in. In semper consequat est, eu porta velit mollis nec. Curabitur posuere enim eget turpis feugiat tempor. Etiam ullamcorper lorem dapibus velit suscipit ultrices.</p>
+                    <ul class="fa-ul">
+                        <li><i class="fa-li fa fa-download"></i><a href="/documents/CV-Sylvain-Dethier.pdf">Télécharger le PDF</a></li>
+                        <li><i class="fa-li fa fa-github"></i><a href="" target="_blank">Github</a></li>
+                        <li><i class="fa-li fa fa-linkedin"></i><a href="" target="_blank">LinkedIn</a></li>
+                        <li><i class="fa-li fa fa-user"></i><a href="" target="_blank">Viadeo</a></li>
+                        <li><i class="fa-li fa fa-twitter"></i><a href="" target="_blank">Twitter</a></li>
+                        <li><i class="fa-li fa fa-google-plus"></i><a href="" target="_blank">Google+</a></li>
+                        <li><i class="fa-li fa fa-envelope"></i><a href="mailto:dethiersylvain@gmail.com" target="_blank">Email</a></li>
+                    </ul>
                 </aside>
 
             </div> <!-- #main -->
@@ -88,9 +109,9 @@
 
         <script>
             var _gaq=[['_setAccount','UA-48020170-1'],['_trackPageview']];
-            (function(d,t){var g=d.createElement(t),s=d.getElementsByTagName(t)[0];
-            g.src='//www.google-analytics.com/ga.js';
-            s.parentNode.insertBefore(g,s)}(document,'script'));
+            (function(d,t){var ga=d.createElement(t),s=d.getElementsByTagName(t)[0];
+                ga.type='text/javascript';ga.async=true;ga.src=('https:'==d.location.protocol?'https://ssl':'http://www')+'.google-analytics.com/ga.js';s.parentNode.insertBefore(ga,s);
+            }(document, 'script'));
         </script>
     </body>
 </html>
