--- a/index.html
+++ b/index.html
@@ -1,117 +1,76 @@
 <!DOCTYPE html>
-<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
-<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
-<!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
-<!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <title>Développeur PHP Symfony, JavaScript, application web sur Paris</title>
-        <meta name="description" content="CV développeur PHP Symfony, Javascript, et application web sur Paris">
-        <meta name="viewport" content="width=device-width">
+<html lang="fr">
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="CV développeur PHP Symfony, Javascript, et application web sur Paris">
+    <meta name="author" content="Sylvain Dethier">
+    <link rel="shortcut icon" href="/favicon.ico">
 
-        <link rel="stylesheet" href="css/normalize.min.css">
+    <title>Développeur PHP Symfony, JavaScript, application web sur Paris</title>
 
-        <!-- FontAwesome -->
-        <link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
+    <!-- Bootstrap core CSS -->
+    <link href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css" rel="stylesheet">
 
-        <link rel="stylesheet" href="css/main.css">
+    <!-- Custom styles for this template -->
+    <link href="css/cover.css" rel="stylesheet">
 
-        <script src="js/vendor/modernizr-2.6.2-respond-1.1.0.min.js"></script>
-    </head>
-    <body>
-        <!--[if lt IE 7]>
-            <p class="chromeframe">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> or <a href="http://www.google.com/chromeframe/?redirect=true">activate Google Chrome Frame</a> to improve your experience.</p>
-        <![endif]-->
+    <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
+    <!--[if lt IE 9]>
+      <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+      <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
+    <![endif]-->
+  </head>
 
-        <div class="header-container">
-            <header class="wrapper clearfix">
-                <h1 class="title">Sylvain Dethier</h1>
-                <nav>
-                    <ul>
-                        <li><a href="#Competences">Compétences</a></li>
-                        <li><a href="#Experiences">Expériences</a></li>
-                        <li><a href="#Formations">Formations</a></li>
-                    </ul>
-                </nav>
-            </header>
+  <body>
+
+    <div class="site-wrapper">
+
+      <div class="site-wrapper-inner">
+
+        <div class="cover-container">
+
+          <div class="masthead clearfix">
+            <div class="inner">
+              <h3 class="masthead-brand">Sylvain Dethier</h3>
+              <ul class="nav masthead-nav">
+                <li><a href="#contact">Contact</a></li>
+              </ul>
+              <h4>Développeur PHP Symfony, JavaScript, application web sur Paris</h4>
+            </div>
+          </div>
+
+          <div class="inner cover">
+            <h1 class="cover-heading">Site en construction.</h1>
+            <p class="lead">Le site est en contruction. Je vous invite à <a href="/documents/CV-Sylvain-Dethier.pdf">télécharger mon CV</a></p>
+            <p class="lead">Ou consulter mon profil via les liens ci-dessous.</p>
+            <p id="contact" class="lead">
+              <a href="http://fr.linkedin.com/in/sylvaindethier" class="btn btn-lg btn-default">LinkedIn</a>
+              <a href=" http://www.viadeo.com/fr/profile/sylvain-dethier" class="btn btn-lg btn-default">Viadeo</a>
+              <a href="https://github.com/sylvaindethier" class="btn btn-lg btn-default">Github</a>
+              <a href="https://twitter.com/sylvaindethier" class="btn btn-lg btn-default">Twitter</a>
+              <a href="https://plus.google.com/109446707283044652498" class="btn btn-lg btn-default">Google+</a>
+              <a href="mailto:dethiersylvain@gmail.com" class="btn btn-lg btn-default">Email</a>
+            </p>
+          </div>
+
+          <div class="mastfoot">
+            <div class="inner">
+              <p>Cover template for <a href="http://getbootstrap.com">Bootstrap</a>.</p>
+            </div>
+          </div>
+
         </div>
 
-        <div class="main-container">
-            <div class="main wrapper clearfix">
-                <h2>Développeur PHP Symfony, JavaScript, application web sur Paris</h2>
+      </div>
 
-                <article>
-                    <header>
-                        <h2 class="section-title">Informations</h2>
-                        <h3><span class="label label-success"><i class="fa fa-check"></i> &nbsp; Actuellement à l'écoute du marché</span></h3>
-                        <h3 class="hidden"><span class="label label-danger"><i class="fa fa-ban"></i> &nbsp; Actuellement non disponible</span></h3>
-                        <p>Je suis passionné par les sciences et l’informatique, et fais une veille continue sur les technologies web. Mon sens de la logique sert à l’analyse des systèmes, la compréhension de leur fonctionnement, ainsi qu’à la réflexion aux solutions. Curieux et perfectionniste, j’aime apprendre les bonnes pratiques pour concevoir du code meilleur: testé, maintenable, évolutif, lisible, compréhensible, tâches automatisées.</p>
-                    </header>
-                    <section>
-                        <h2 class="section-title" id="Competences">Compétences</h2>
-                        <h3><i>Langages / Frameworks</i></h3>
-                        <ul class="no-ul">
-                            <li><b class="skill">PHP</b> <small class="level"><i class="fa fa-circle"></i><i class="fa fa-circle"></i><i class="fa fa-circle"></i><i class="fa fa-circle-o"></i><i class="fa fa-circle-o"></i></small> confirmé: Symfony 1.4, Symfony2, Zend 1.x</li>
+    </div>
 
-                            <li><b class="skill">JavaScript</b> <small class="level"><i class="fa fa-circle"></i><i class="fa fa-circle"></i><i class="fa fa-circle"></i><i class="fa fa-circle-o"></i><i class="fa fa-circle-o"></i></small> confirmé: Natif, AJAX, jQuery, ExtJS, Promise, AngularJS</li>
-
-                            <li><b class="skill">SQL</b> <small class="level"><i class="fa fa-circle"></i><i class="fa fa-circle"></i><i class="fa fa-circle"></i><i class="fa fa-circle-o"></i><i class="fa fa-circle-o"></i></small> confirmé: MySQL, PostgreSQL</li>
-
-                            <li><b class="skill">HTML</b> <small class="level"><i class="fa fa-circle"></i><i class="fa fa-circle"></i><i class="fa fa-circle"></i><i class="fa fa-circle-o"></i><i class="fa fa-circle-o"></i></small> confirmé: Intégration, Html5 Boilerplate</li>
-
-                            <li><b class="skill">CSS</b> <small class="level"><i class="fa fa-circle"></i><i class="fa fa-circle"></i><i class="fa fa-circle-o"></i><i class="fa fa-circle-o"></i><i class="fa fa-circle-o"></i></small> intermédiare: Bootstrap, Modernizr, Système de grille, Responsive</li>
-                        </ul>
-                        <h3><i>Outils</i></h3>
-                        <p>Plateforme LAMP, PhpMyAdmin, MySQL Workbench, PHPUnit, NodeJS, Git / Github, SVN, Redmine, Sublime Text, Eclipse, Netbeans</p>
-                    </section>
-                    <section>
-                        <h2 id="Experiences">Expériences</h2>
-                        <p></p>
-                    </section>
-                    <section>
-                        <h2 id="Formations">Formations</h2>
-                        <p></p>
-                    </section>
-                    <footer>
-                        <h3>article footer h3</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam sodales urna non odio egestas tempor. Nunc vel vehicula ante. Etiam bibendum iaculis libero, eget molestie nisl pharetra in. In semper consequat est, eu porta velit mollis nec. Curabitur posuere enim eget turpis feugiat tempor.</p>
-                    </footer>
-                </article>
-
-                <aside>
-                    <h3><a name="contact" class="hidden"></a>Contact</h3>
-                    <ul class="fa-ul">
-                        <li><i class="fa-li fa fa-download"></i><a href="/documents/CV-Sylvain-Dethier.pdf">Télécharger le PDF</a></li>
-                        <li><i class="fa-li fa fa-github"></i><a href="" target="_blank">Github</a></li>
-                        <li><i class="fa-li fa fa-linkedin"></i><a href="" target="_blank">LinkedIn</a></li>
-                        <li><i class="fa-li fa fa-user"></i><a href="" target="_blank">Viadeo</a></li>
-                        <li><i class="fa-li fa fa-twitter"></i><a href="" target="_blank">Twitter</a></li>
-                        <li><i class="fa-li fa fa-google-plus"></i><a href="" target="_blank">Google+</a></li>
-                        <li><i class="fa-li fa fa-envelope"></i><a href="mailto:dethiersylvain@gmail.com" target="_blank">Email</a></li>
-                    </ul>
-                </aside>
-
-            </div> <!-- #main -->
-        </div> <!-- #main-container -->
-
-        <div class="footer-container">
-            <footer class="wrapper">
-                <!--<h3>footer</h3>-->
-                <p>Propulsé par: <a href="http://pages.github.com/">Github Pages <i class="fa fa-github"></i></a>, <a href="http://www.initializr.com/">Initializr <i class="fa fa-html5"></i> <i class="fa fa-css3"></i></a>, <a href="http://fortawesome.github.io/Font-Awesome/">FontAwesome</a></p>
-            </footer>
-        </div>
-
-        <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script>
-        <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.10.1.min.js"><\/script>')</script>
-
-        <script src="js/main.js"></script>
-
-        <script>
-            var _gaq=[['_setAccount','UA-48020170-1'],['_trackPageview']];
-            (function(d,t){var ga=d.createElement(t),s=d.getElementsByTagName(t)[0];
-                ga.type='text/javascript';ga.async=true;ga.src=('https:'==d.location.protocol?'https://ssl':'http://www')+'.google-analytics.com/ga.js';s.parentNode.insertBefore(ga,s);
-            }(document, 'script'));
-        </script>
-    </body>
+    <!-- Bootstrap core JavaScript
+    ================================================== -->
+    <!-- Placed at the end of the document so the pages load faster -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+    <script src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
+  </body>
 </html>
