--- a/index.html
+++ b/index.html
@@ -37,13 +37,12 @@
               <ul class="nav masthead-nav">
                 <li><a href="#contact">Contact</a></li>
               </ul>
-              <h4>Développeur PHP Symfony, JavaScript, application web sur Paris</h4>
             </div>
           </div>
 
           <div class="inner cover">
             <h1 class="cover-heading">Site en construction.</h1>
-            <p class="lead">Le site est en contruction. Je vous invite à <a href="/documents/CV-Sylvain-Dethier.pdf">télécharger mon CV</a></p>
+            <p class="lead">Je suis développeur PHP Symfony, JavaScript, application web sur Paris. Vous pouvez <a href="/documents/CV-Sylvain-Dethier.pdf" style="text-decoration:underline">télécharger mon CV</a></p>
             <p class="lead">Ou consulter mon profil via les liens ci-dessous.</p>
             <p id="contact" class="lead">
               <a href="http://fr.linkedin.com/in/sylvaindethier" class="btn btn-lg btn-default">LinkedIn</a>
