--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 
   ga('create', 'UA-48020170-2', 'sylvaindethier.github.io');
   ga('send', 'pageview');
-  jQuery('a').on('clcik', function() {
+  jQuery('a').on('click', function() {
     var label = jQuery(this).text();
     ga('send','event','link', 'click', label);
   });
