--- a/cv.html
+++ b/cv.html
@@ -6,8 +6,8 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>Développeur PHP Symfony, JavaScript, application web sur Paris</title>
-        <meta name="description" content="CV développeur PHP Symfony, Javascript, et application web sur Paris">
+        <title>Développeur PHP Symfony, JavaScript, Web app sur Paris</title>
+        <meta name="description" content="CV développeur PHP Symfony, Javascript, Web app sur Paris">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
         <!-- Bootstrap CDN -->
@@ -50,12 +50,12 @@
 
         <div id="main" class="container">
             <div class="page-header text-center">
-                <h1>Développeur PHP Symfony, JavaScript, application web sur Paris</h1>
+                <h1>Développeur PHP Symfony, JavaScript, Web app</h1>
 
                 <h3><span class="label label-success"><span class="glyphicon glyphicon-ok"></span> &nbsp; Actuellement à l'écoute du marché</span></h3>
                 <h3 class="hidden"><span class="label label-danger"><span class="glyphicon glyphicon-remove"></span> &nbsp; Actuellement non disponible</span></h3>
 
-                <h3><a class="label label-default" href="/documents/CV-Sylvain-Dethier.pdf"><span class="glyphicon glyphicon-download"></span> &nbsp; Télécharger le PDF</a></h3>
+                <h3><a class="label label-default glow" data-ga-label="Download PDF" target="_blank" href="/documents/CV-Sylvain-Dethier.pdf"><span class="glyphicon glyphicon-download"></span> &nbsp; Télécharger le PDF</a></h3>
 
             </div>
 
@@ -232,40 +232,40 @@
                 <h2 id="contact" class="title text-center">Contact</h2>
 
                 <div id="profile-linkedin" class="row profile">
-                    <div class="col-md-2"><a target="_blank" href="http://fr.linkedin.com/in/sylvaindethier" class="btn btn-default"><i class="fa fa-fw fa-linkedin"></i> LinkedIn</a></div>
+                    <div class="col-md-2"><a data-ga-label="View LinkedIn" target="_blank" href="http://fr.linkedin.com/in/sylvaindethier" class="btn btn-default glow"><i class="fa fa-fw fa-linkedin"></i> LinkedIn</a></div>
                     <div class="col-md-10"><script src="//platform.linkedin.com/in.js" type="text/javascript"></script><script type="IN/MemberProfile" data-id="http://www.linkedin.com/in/sylvaindethier" data-format="click" data-text="Sylvain DETHIER"></script></div>
                 </div>
 
                 <div id="profile-viadeo" class="row profile">
-                    <div class="col-md-2"><a target="_blank" href=" http://www.viadeo.com/fr/profile/sylvain-dethier" class="btn btn-default"><i class="fa fa-fw fa-suitcase"></i> Viadeo</a></div>
+                    <div class="col-md-2"><a data-ga-label="View Viadeo" target="_blank" href=" http://www.viadeo.com/fr/profile/sylvain-dethier" class="btn btn-default glow"><i class="fa fa-fw fa-suitcase"></i> Viadeo</a></div>
                     <div class="col-md-10"><div class="viadeo-profile-card" data-user-id="EOdubjbyEgewhdgdIzwvOeqDOc" data-color="light" data-partner-id="EOdubjbyEgewhdgdIzwvOeqDOc" data-icon="button" data-behaviour="onclick" data-language="fr"></div></div>
                 </div>
 
                 <div id="profile-github" class="row profile">
-                    <div class="col-md-2"><a target="_blank" href="https://github.com/sylvaindethier" class="btn btn-default"><i class="fa fa-fw fa-github"></i> Github</a></div>
+                    <div class="col-md-2"><a data-ga-label="View GitHub" target="_blank" href="https://github.com/sylvaindethier" class="btn btn-default glow"><i class="fa fa-fw fa-github"></i> GitHub</a></div>
                     <div class="col-md-10"><iframe src="http://ghbtns.com/github-btn.html?user=sylvaindethier&type=follow&count=true" allowtransparency="true" frameborder="0" scrolling="0" width="180" height="20"></iframe></div>
                 </div>
 
                 <div id="profile-twitter" class="row profile">
-                    <div class="col-md-2"><a target="_blank" href="https://twitter.com/sylvaindethier" class="btn btn-default"><i class="fa fa-fw fa-twitter"></i> Twitter</a></div>
+                    <div class="col-md-2"><a data-ga-label="View Twitter" target="_blank" href="https://twitter.com/sylvaindethier" class="btn btn-default glow"><i class="fa fa-fw fa-twitter"></i> Twitter</a></div>
                     <div class="col-md-10"><a href="https://twitter.com/sylvaindethier" class="twitter-follow-button" data-show-count="true" data-lang="fr">Suivre @sylvaindethier</a></div>
                 </div>
 
                 <div id="profile-google-plus" class="row profile">
-                    <div class="col-md-2"><a target="_blank" href="https://plus.google.com/109446707283044652498" class="btn btn-default"><i class="fa fa-fw fa-google-plus"></i> Google+</a></div>
+                    <div class="col-md-2"><a data-ga-label="View Google+" target="_blank" href="https://plus.google.com/109446707283044652498" class="btn btn-default glow"><i class="fa fa-fw fa-google-plus"></i> Google+</a></div>
                     <div class="col-md-10"><div class="g-follow" data-annotation="bubble" data-height="20" data-href="//plus.google.com/u/0/109446707283044652498" data-rel="author"></div></div>
                 </div>
 
                 <div id="contact-email" class="row profile">
-                    <div class="col-md-2"><a target="_blank" href="mailto:dethiersylvain@gmail.com" class="btn btn-default"><i class="fa fa-fw fa-envelope"></i> Email</a></div>
-                    <div class="col-md-10"><a target="_blank" href="mailto:dethiersylvain@gmail.com">dethiersylvain [at] gmail.com</a></div>
+                    <div class="col-md-2"><a data-ga-label="Write email button" target="_blank" href="mailto:dethiersylvain@gmail.com" class="btn btn-default glow"><i class="fa fa-fw fa-envelope"></i> Email</a></div>
+                    <div class="col-md-10"><a data-ga-label="Write email link" target="_blank" href="mailto:dethiersylvain@gmail.com">dethiersylvain [at] gmail.com</a></div>
                 </div>
             </section>
         </div><!-- #main .container -->
 
         <footer class="inverted">
             <div class="container">
-                <p class="text-center">Propulsé avec <i class="fa fa-heart"></i> par: <a href="http://pages.github.com/">Github Pages <i class="fa fa-github"></i></a>, <a href="http://getbootstrap.com/">Bootstrap <i class="fa fa-html5"></i> <i class="fa fa-css3"></i></a>, <a href="http://fortawesome.github.io/Font-Awesome/">FontAwesome <i class="fa fa-flag"></i></a></p>
+                <p class="text-center">Propulsé avec <i class="fa fa-heart"></i> par: <a href="http://pages.github.com/">Github Pages <i class="fa fa-github"></i></a>, <a href="http://getbootstrap.com/">Bootstrap <i class="fa fa-html5"></i> <i class="fa fa-css3"></i></a>, <a href="http://fortawesome.github.io/Font-Awesome/">FontAwesome <i class="fa fa-flag"></i></a>, <a href="https://ianlunn.github.io/Hover/">Hover</a></p>
             </div>
         </footer>
 
@@ -280,23 +280,5 @@
 
         <script src="js/plugins.js"></script>
         <script src="js/main.js"></script>
-
-
-        <script>
-/* Google Analytics */
-(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-})(window,document,'script','//www.google-analytics.com/analytics.js','ga');ga('create', 'UA-48020170-2', 'sylvaindethier.github.io');ga('send', 'pageview');
-
-/* Viadeo profile */
-var viadeoWidgetsJsUrl=document.location.protocol+"//widgets.viadeo.com";(function(){var e=document.createElement('script');e.type='text/javascript';e.async=true;e.src=viadeoWidgetsJsUrl+'/js/viadeowidgets.js';var s=document.getElementsByTagName('head')[0];s.appendChild(e);})();
-
-/* Twitter button */
-!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');
-
-/* Google Plus */
-window.___gcfg={lang:'fr'};(function(){var po=document.createElement('script');po.type='text/javascript';po.async=true;po.src='https://apis.google.com/js/platform.js';var s=document.getElementsByTagName('script')[0];s.parentNode.insertBefore(po,s);})();
-        </script>
     </body>
 </html>
