--- a/index.html
+++ b/index.html
@@ -199,22 +199,22 @@
                 </div>
 
                 <div id="profile-viadeo" class="row profile">
-                    <div class="col-md-2"><a data-ga-label="View Viadeo" target="_blank" href=" http://www.viadeo.com/fr/profile/sylvain-dethier" class="btn btn-default glow"><i class="fa fa-fw fa-suitcase"></i> Viadeo</a></div>
+                    <div class="col-md-2"><a data-ga-label="View Viadeo" target="_blank" href="//www.viadeo.com/fr/profile/sylvain-dethier" class="btn btn-default glow"><i class="fa fa-fw fa-suitcase"></i> Viadeo</a></div>
                     <div class="col-md-10"><div class="viadeo-profile-card" data-user-id="EOdubjbyEgewhdgdIzwvOeqDOc" data-color="light" data-partner-id="EOdubjbyEgewhdgdIzwvOeqDOc" data-icon="button" data-behaviour="onclick" data-language="fr"></div></div>
                 </div>
 
                 <div id="profile-github" class="row profile">
-                    <div class="col-md-2"><a data-ga-label="View GitHub" target="_blank" href="https://github.com/sylvaindethier" class="btn btn-default glow"><i class="fa fa-fw fa-github"></i> GitHub</a></div>
-                    <div class="col-md-10"><iframe src="http://ghbtns.com/github-btn.html?user=sylvaindethier&type=follow&count=true" allowtransparency="true" frameborder="0" scrolling="0" width="180" height="20"></iframe></div>
+                    <div class="col-md-2"><a data-ga-label="View GitHub" target="_blank" href="//github.com/sylvaindethier" class="btn btn-default glow"><i class="fa fa-fw fa-github"></i> GitHub</a></div>
+                    <div class="col-md-10"><iframe src="//ghbtns.com/github-btn.html?user=sylvaindethier&type=follow&count=true" allowtransparency="true" frameborder="0" scrolling="0" width="180" height="20"></iframe></div>
                 </div>
 
                 <div id="profile-twitter" class="row profile">
-                    <div class="col-md-2"><a data-ga-label="View Twitter" target="_blank" href="https://twitter.com/sylvaindethier" class="btn btn-default glow"><i class="fa fa-fw fa-twitter"></i> Twitter</a></div>
-                    <div class="col-md-10"><a href="https://twitter.com/sylvaindethier" class="twitter-follow-button" data-show-count="true" data-lang="fr">Suivre @sylvaindethier</a></div>
+                    <div class="col-md-2"><a data-ga-label="View Twitter" target="_blank" href="//twitter.com/sylvaindethier" class="btn btn-default glow"><i class="fa fa-fw fa-twitter"></i> Twitter</a></div>
+                    <div class="col-md-10"><a href="//twitter.com/sylvaindethier" class="twitter-follow-button" data-show-count="true" data-lang="fr">Suivre @sylvaindethier</a></div>
                 </div>
 
                 <div id="profile-google-plus" class="row profile">
-                    <div class="col-md-2"><a data-ga-label="View Google+" target="_blank" href="https://plus.google.com/109446707283044652498" class="btn btn-default glow"><i class="fa fa-fw fa-google-plus"></i> Google+</a></div>
+                    <div class="col-md-2"><a data-ga-label="View Google+" target="_blank" href="//plus.google.com/109446707283044652498" class="btn btn-default glow"><i class="fa fa-fw fa-google-plus"></i> Google+</a></div>
                     <div class="col-md-10"><div class="g-follow" data-annotation="bubble" data-height="20" data-href="//plus.google.com/u/0/109446707283044652498" data-rel="author"></div></div>
                 </div>
 
