Add visible white space

--- a/cv.html
+++ b/cv.html
@@ -57,6 +57,7 @@
                 <p class="lead">
                     <span class="label label-success"><span class="glyphicon glyphicon-ok"></span> &nbsp; Actuellement à l'écoute du marché</span>
                     <span class="hidden label label-danger"><span class="glyphicon glyphicon-remove"></span> &nbsp; Actuellement non disponible</span>
+                    &nbsp;
                     <a class="label label-default glow" data-ga-label="Download PDF" target="_blank" href="/documents/CV-Sylvain-Dethier.pdf" title="Mise à jour avril 2014"><span class="glyphicon glyphicon-download"></span> &nbsp; Télécharger le PDF</a>
                 </p>
             </section>
@@ -190,21 +191,29 @@
                 </div>
             </section>
 
-            <section>
-                <h2 id="contact" class="h2 text-center">Contact</h2>
+            <section id="contact">
+                <h2 class="h2 text-center">Contact</h2>
 
-                <a data-ga-label="View LinkedIn" target="_blank" href="http://fr.linkedin.com/in/sylvaindethier" class="btn btn-default glow"><i class="fa fa-fw fa-linkedin"></i> LinkedIn</a>
+                <div class="text-center">
+                    <a data-ga-label="View LinkedIn" target="_blank" href="http://fr.linkedin.com/in/sylvaindethier" class="btn btn-default glow"><i class="fa fa-fw fa-linkedin"></i> LinkedIn</a>
+                    <span>&nbsp;</span>
 
-                <a data-ga-label="View Viadeo" target="_blank" href="//www.viadeo.com/fr/profile/sylvain-dethier" class="btn btn-default glow"><i class="fa fa-fw fa-suitcase"></i> Viadeo</a>
+                    <a data-ga-label="View Viadeo" target="_blank" href="http://www.viadeo.com/fr/profile/sylvain-dethier" class="btn btn-default glow"><i class="fa fa-fw fa-suitcase"></i> Viadeo</a>
+                    <span>&nbsp;</span>
 
-                <a data-ga-label="View GitHub" target="_blank" href="//github.com/sylvaindethier" class="btn btn-default glow"><i class="fa fa-fw fa-github"></i> GitHub</a>
+                    <a data-ga-label="View GitHub" target="_blank" href="https://github.com/sylvaindethier" class="btn btn-default glow"><i class="fa fa-fw fa-github"></i> GitHub</a>
+                    <span>&nbsp;</span>
 
-                <a data-ga-label="View Twitter" target="_blank" href="//twitter.com/sylvaindethier" class="btn btn-default glow"><i class="fa fa-fw fa-twitter"></i> Twitter</a>
+                    <a data-ga-label="View Twitter" target="_blank" href="https://twitter.com/sylvaindethier" class="btn btn-default glow"><i class="fa fa-fw fa-twitter"></i> Twitter</a>
+                    <span>&nbsp;</span>
 
-                <a data-ga-label="View Google+" target="_blank" href="//plus.google.com/109446707283044652498" class="btn btn-default glow"><i class="fa fa-fw fa-google-plus"></i> Google+</a>
+                    <a data-ga-label="View Google+" target="_blank" href="http://plus.google.com/109446707283044652498" class="btn btn-default glow"><i class="fa fa-fw fa-google-plus"></i> Google+</a>
+                    <span>&nbsp;</span>
 
-                <a data-ga-label="Write email" target="_blank" href="mailto:dethiersylvain@gmail.com" class="btn btn-default glow"><i class="fa fa-fw fa-envelope"></i> Email</a>
-            </section>
+                    <a data-ga-label="Write email" target="_blank" href="mailto:dethiersylvain@gmail.com" class="btn btn-default glow"><i class="fa fa-fw fa-envelope"></i> Email</a>
+                </div>
+
+                </section>
         </div><!-- #main .container -->
 
         <footer class="inverted">
